2008-04-15  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/Makefile.am:
    * src/ccm-debug.c:
    * src/ccm-debug.h: Add debug functions

    * src/ccm-screen.c:
    * src/ccm-window.c:
    * src/ccm-window.h:
    * src/ccm.h: Fix damage on window switch + code cleanup

2008-04-14  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/menu-animation/ccm-menu-animation.c:
    * src/ccm-drawable.c:
    * src/ccm-screen.c:
    * src/ccm-screen.h:
    * src/ccm-window.c:
    * src/ccm-window.h: After some experimentation it's the more reasonably way
                        to get stack for many window manager it's get stacking
                        list with XQueryTree, but this method can slow down 
                        redraw.

2008-04-11  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c:
    * src/ccm-window.c:
    * src/ccm-window.h:
    * src/ccm.h: Try an another way to check stack.
    
2008-04-10  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c:
    * src/ccm-window.c: Ordering fixes

2008-04-09  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c: Set default type to NORMAL.

2008-04-09  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c:
    * src/ccm-window.c:
    * src/ccm.h: Send state and property changed only if modified, fix restack
                 below if is hidden.

2008-04-08  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c:
    * src/ccm-window.c: Fix stacking some layer stacking.

2008-04-07  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c: Fix window stacking in DESKTOP layer and window in
                        NORMAL layer.

2008-04-07  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/shadow/ccm-shadow.c:
    * src/ccm-screen.c:
    * src/ccm-screen.h:
    * src/ccm-window.c:
    * src/ccm-window.h:
    * src/ccm.h: Implement stacking layer filter.
